# djangonian-grapes

./: README.md  pyproject.toml
builder/: admin.py  models.py  urls.py  views.py
builder/migrations/: 0001_initial.py
builder/templates/builder/: detail.html  index.html
project/: settings.py  urls.py
project/templates/: base.html
