[tool.poetry]
name = "grapesjs-django"
version = "0.1.0"
description = ""
authors = ["Carlos Martinez <c.martinez@runtime-revolution.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
